--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,12 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_booklist">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.lsx.finalhomework.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_booklist"
+        android:name="com.lsx.finalhomework.BookFragment"
+        android:label="图书列表"
+        tools:layout="@layout/book_fragment_item_list" >
+        <action
+            android:id="@+id/action_navigation_booklist_to_bookDetailFragment"
+            app:destination="@id/bookDetailFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:launchSingleTop="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/navigation_cart"
+        android:name="com.lsx.finalhomework.CartFragment"
+        android:label="购物车"
+        tools:layout="@layout/cart_fragment_item_list" />
+    <fragment
+        android:id="@+id/navigation_order"
+        android:name="com.lsx.finalhomework.OrderFragment"
+        android:label="历史订单"
+        tools:layout="@layout/order_fragment_item_list" />
+    <fragment
+        android:id="@+id/bookDetailFragment"
+        android:name="com.lsx.finalhomework.BookDetailFragment"
+        android:label="fragment_book_detail"
+        tools:layout="@layout/fragment_book_detail" />
 
 </navigation>
