--- a/app/src/main/res/layout/book_fragment_item.xml
+++ b/app/src/main/res/layout/book_fragment_item.xml
@@ -6,12 +6,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView
+    <com.lsx.finalhomework.NWImageView
         android:id="@+id/list_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_weight="0"
-        android:layout_marginRight="12dp"
+        android:layout_marginEnd="12dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,10 +22,12 @@
         <TextView
             android:id="@+id/text_name"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
             android:layout_marginTop="28dp"
             android:layout_marginEnd="20dp"
+            android:autoSizeTextType="uniform"
             android:text="Name"
+            android:textColor="#000000"
             android:textSize="24sp"
             app:layout_constraintEnd_toStartOf="@+id/text_price"
             app:layout_constraintStart_toStartOf="parent"
