chore: 将文件分类

--- a/app/src/main/res/layout/order_fragment_item_list.xml
+++ b/app/src/main/res/layout/order_fragment_item_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".OrderFragment"
+    tools:context=".controllers.OrderFragment"
     tools:listitem="@layout/order_fragment_item" />
