--- a/app/src/main/res/layout/book_fragment_item_list.xml
+++ b/app/src/main/res/layout/book_fragment_item_list.xml
@@ -7,5 +7,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".BookFragment"
+    tools:context=".controllers.BookFragment"
     tools:listitem="@layout/book_fragment_item" />
