--- a/app/src/main/res/layout/cart_fragment_item_list.xml
+++ b/app/src/main/res/layout/cart_fragment_item_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".CartFragment"
+    tools:context=".controllers.CartFragment"
     tools:listitem="@layout/cart_fragment_item" />
