--- a/app/src/main/res/layout/cart_fragment_item.xml
+++ b/app/src/main/res/layout/cart_fragment_item.xml
@@ -1,93 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
     android:layout_weight="0"
-    android:orientation="horizontal">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp">
 
-    <com.lsx.finalhomework.NWImageView
-        android:id="@+id/list_image2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="12dp"
-        android:layout_weight="0"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/text_name2"
-            android:layout_width="0dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="16dp"
-            android:autoSizeTextType="uniform"
-            android:text="Name"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_price2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Price"
-            android:textColor="#FF5722"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_name2" />
+        <com.lsx.finalhomework.NWImageView
+            android:id="@+id/list_image2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="12dp"
+            android:layout_weight="0"
+            tools:srcCompat="@tools:sample/avatars" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
             <TextView
-                android:id="@+id/btn_minus"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_weight="1"
-                android:text="-"
-                android:textAlignment="center"
-                android:textColor="@color/purple_500"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/text_quantity"
-                android:layout_width="30dp"
-                android:layout_height="wrap_content"
-                android:text="99"
-                android:textAlignment="center"
+                android:id="@+id/text_name2"
+                android:layout_width="0dp"
+                android:layout_height="28dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:autoSizeTextType="uniform"
+                android:text="Name"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/btn_plus"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_weight="1"
-                android:text="+"
-                android:textAlignment="center"
-                android:textColor="@color/purple_500"
+                android:id="@+id/text_price2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Price"
+                android:textColor="#FF5722"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/btn_minus"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_weight="1"
+                    android:text="-"
+                    android:textAlignment="center"
+                    android:textColor="@color/purple_500"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-</LinearLayout>
+                <TextView
+                    android:id="@+id/text_quantity"
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:text="99"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/btn_plus"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_weight="1"
+                    android:text="+"
+                    android:textAlignment="center"
+                    android:textColor="@color/purple_500"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
