--- a/app/src/main/res/layout/cart_fragment_item_list.xml
+++ b/app/src/main/res/layout/cart_fragment_item_list.xml
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
-                android:text="立即下单" />
+                android:text="支付" />
 
         </LinearLayout>
 
