--- a/app/src/main/res/layout/book_fragment_item.xml
+++ b/app/src/main/res/layout/book_fragment_item.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:text="Price"
+            android:textAlignment="textEnd"
             android:textColor="#FF5722"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
