--- a/app/src/main/res/layout/cart_fragment_item.xml
+++ b/app/src/main/res/layout/cart_fragment_item.xml
@@ -34,10 +34,11 @@
             <TextView
                 android:id="@+id/text_name2"
                 android:layout_width="0dp"
-                android:layout_height="28dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:autoSizeTextType="uniform"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
+                android:singleLine="true"
                 android:text="Name"
                 android:textColor="#000000"
                 android:textSize="20sp"
